# latent-watch

./: .gitignore  .gitmodules  ATTRIBUTION.md  LICENSE  README.md  pyproject.toml  requirements.txt  research_log.md
configs/data/: beavertails_risk.yaml
configs/evaluation/: safety_risk.yaml
configs/training/: llama_1b_answer_only.yaml  llama_1b_coconut.yaml  llama_1b_cot.yaml
data/: README.md  beavertails_to_schema.py
notebooks/: Latent_Watch_Stage_0.ipynb  stage0_necessity_check.ipynb  train_pilot.ipynb
results/: early_stopping_coconut_gpt2_gpt2-prontoqa-coconut_30k_train_schema_k10_20260712_173147.json  early_stopping_coconut_gpt2_gpt2-prontoqa-coconut_30k_train_schema_k10_20260712_175742.json  early_stopping_coconut_gpt2_gpt2-prontoqa-coconut_30k_train_schema_k10_20260712_181410.json  early_stopping_coconut_gpt2_gpt2-prontoqa-coconut_prontoqa_test_k10_20260712_175225.json  early_stopping_coconut_llama32-1b_llama32-1b-prontoqa-coconut_30k_train_schema_k10_20260712_184141.json  early_stopping_coconut_llama32-1b_llama32-1b-prontoqa-cot_30k_train_schema_k10_20260712_195026.json
src/: __init__.py  coconut_extraction.py  coconut_extraction_test.py
src/data/: aggregate_prompts.py  build_splits.py  generate_rationales.py  load_beavertails.py  normalize.py  render_training_formats.py  sample_prompts.py  validate_rationales.py
src/evaluation/: __init__.py  evaluate_classification.py  evaluate_coconut_classification.py
src/training/: __init__.py  base_trainer.py  coconut.py  formatters.py  lora_utils.py  train_answer_only.py  train_coconut.py  train_coconut.sh  (+1 more)
(+1 files in other folders)
