[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "latent-watch"
version = "0.1.0"
description = "Prompt-risk classifier comparing answer-only, CoT, and COCONUT reasoning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19",
    "transformers>=4.41",
    "torch>=2.2",
    "peft>=0.10",
    "trl>=0.8",
    "openai>=1.25",
    "pandas>=2.2",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "jsonlines>=4.0",
    "accelerate>=0.29",
    "bitsandbytes>=0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
